--- a/quinielista/estadisticas/templates/estadisticas/navbar.html
+++ b/quinielista/estadisticas/templates/estadisticas/navbar.html
@@ -24,7 +24,7 @@
 		<div class="collapse navbar-collapse" id="navbarQuinielista">
 			<a class="navbar-brand" href="#">Quinielista</a>
 			<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-		  		<li class="nav-item">
+		  		<li class="nav-item active">
 		    		<a class="nav-link" href="{%  url 'estadisticas:index' %}">Principal<span class="sr-only">(current)</span></a>
 		  		</li>
 		  		<li class="nav-item">
@@ -32,6 +32,9 @@
 		  		</li>
 		  		<li class="nav-item">
 		    		<a class="nav-link" href="{% url 'estadisticas:liga123' 2 %}">Liga 123</a>
+		  		</li>
+		  		<li class="nav-item">
+		    		<a class="nav-link" href="{% url 'estadisticas:resultadosBBVA' 1 %}">Resultados BBVA</a>
 		  		</li>
 		 		<li class="nav-item dropdown">
 			        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
